--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
-    "pg": "^7.7.1"
+    "pg": "^7.7.1",
+    "url-parse": "^1.4.4"
   },
   "devDependencies": {},
   "autoload": {
