--- a/.env
+++ b/.env
@@ -7,9 +7,9 @@ APP_URL=http://${HOST}:${PORT}
 
 CACHE_VIEWS=false
 
-APP_KEY=
+APP_KEY=hIz1kJsbdnDagHnt9O4ezh17GM1vuArH
 
-DB_CONNECTION=sqlite
+DB_CONNECTION=pg
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USER=root
